Ignore blank post-logout redirect URI entries
Signed-off-by: Khanh Le <58643031+nkgotcode@users.noreply.github.com>